# clog

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  LICENSE  NEWS  README  README.md  cmake.h.in
doc/: CMakeLists.txt
doc/demo/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  hamlet  intro.txt
doc/man/: .gitignore  clog.1  clog.1.in
src/: .gitignore  CMakeLists.txt  Color.cpp  Color.h  File.cpp  File.h  FileCache.cpp  FileCache.h  Nibbler.cpp  Nibbler.h  Path.cpp  Path.h  RX.cpp  RX.h  Rule.cpp  Rule.h  clog.cpp  rules.cpp  rx.cpp  rx.h  rx.old.h  text.cpp  text.h  util.cpp  util.h
test/: .gitignore  CMakeLists.txt  blank.t  color.t.cpp  decorate.both.t  decorate.date.t  decorate.t  decorate.time.t  nibbler.t.cpp  pattern.t  problems  regex.line.t  regex.match.t  regex.t  rule.t.cpp  run_all  rx.t.cpp  string.line.t  string.match.t  suppress.t  template.t  test.cpp  test.h  version.t
test/basetest/: __init__.py  clog.py  testing.py  utils.py
